# asr_halcon_bridge

./: .gitignore  CMakeLists.txt  package.xml
cmake/: FindHalcon.cmake
include/asr_halcon_bridge/: halcon_image.h  halcon_pointcloud.h
src/asr_halcon_bridge/: halcon_image.cpp  halcon_pointcloud.cpp
